# vex-protocol

./: .gitignore  .lintstagedrc.json  .prettierignore  .tool-versions  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.beads/: issues.jsonl  metadata.json
.changeset/: account-entitlements-api.md  add-device-approvals.md  add-double-ratchet.md  android-push-channel.md  auth-credential-contract.md  avatar-json-e2e.md  avatar-upload-fallback.md  batch-mail-send.md  batch-message-delete-events.md  best-effort-self-dm-forward.md  bind-device-approval-signature.md  bind-mail-ingress-auth.md  brave-websockets-report.md  calm-keys-tap.md  calm-mail-push-fanout.md  calm-masks-sing.md  case-insensitive-usernames.md  clean-scorecard-badges.md  cli-api-url-flag.md  cli-chat-delivery-fix.md  cli-host-scoped-accounts.md  cli-msgpack-errors.md  cli-passkey-login.md  cli-passkey-page.md  cli-removed-device-login.md  compact-passkey-server-icons.md  concurrent-crypto-ci-stability.md  config.json  desktop-passkey-browser-handoff.md  device-token-revocation-fix.md  dm-own-device-forward.md  embed-icon-attachment.md  encrypted-call-signaling.md  encrypted-message-extra.md  fetch-fix-cli-flag.md  fix-ratchet-bugs.md  fix-registration-prekey-rollout.md  fix-slow-startup.md  group-mail-inbox-ack.md  group-management.md  (+74 more)
.claude/: settings.json
apps/spire/: .clabot  (+24 more)
apps/spire/rust/: Cargo.toml
apps/spire/rust/src/: main.rs
docs/: README.md
scripts/: integration-cli-with-docker.sh  stress-cli-with-docker.sh
(+183 files in other folders)
