[package]
name = "spire-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dotenvy = "0.15"
ed25519-dalek = "2.2"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = "9.3"
rand = "0.8"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
url = "2.5"
uuid = { version = "1.19", features = ["v4"] }
webauthn-rs = "0.5.5"
